src/test/ui/issues/issue-37311-type-length-limit/issue-37311.stderr
error: reached the type-length limit while instantiating `<(&(&(&(&(&(&(&(&(&(&(&(&(&(&(&(...))))))))))))))) as Foo>::recurse`
  --> $DIR/issue-37311.rs:15:5
   |
LL |     fn recurse(&self) {
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: consider adding a `#![type_length_limit="2097149"]` attribute to your crate

error: aborting due to previous error

